# trepi-server

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
.sqlx/: query-20a26f2796c0eb79a46702feb83b40a4c85c2d5209765ff29a16772c79e4683f.json
migrations/: 20250526013924_init.down.sql  20250526013924_init.up.sql  20250527003617_fix_nutrients.down.sql  20250527003617_fix_nutrients.up.sql  20250527033310_add_fcid_rm_sd_foods.down.sql  20250527033310_add_fcid_rm_sd_foods.up.sql  20250527035441_fix_foods.down.sql  20250527035441_fix_foods.up.sql  20250527042930_drop_not_null_foods.down.sql  20250527042930_drop_not_null_foods.up.sql  20250527063445_remove_fk_nutrient.down.sql  20250527063445_remove_fk_nutrient.up.sql  20250527063736_temp_my_nut_fix.down.sql  20250527063736_temp_my_nut_fix.up.sql  20250528190155_create_foods_table.up.sql  20250528190208_create_nutrients_table.down.sql  20250528190208_create_nutrients_table.up.sql  20250529225834_create_food_details_view.down.sql  20250529225834_create_food_details_view.up.sql
src/: db.rs  handler.rs  main.rs  models.rs  schema.rs
