[package]
name = "trepi-server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-native-tls" ] }
reqwest = { version = "0.11", features = ["json", "tls"]}
serde = {"version = 1.0, features = ["derive"]}
serde_json = "1.0"