[package]
name = "trepi-server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
sqlx = { version = "0.8.6", features = ["chrono", "postgres", "runtime-async-std-native-tls", "runtime-tokio-native-tls", "uuid", "bigdecimal"] }
serde = { version = "1.0.152", features = ["derive"] }
chrono = {version = "0.4.41", features = ["serde"]}
actix-cors = "0.7.1"
serde_json = "1.0.140"
env_logger = "0.11.8"
dotenv = "0.15.0"
uuid = { version = "1.17.0", features = ["serde", "v4"] }
bigdecimal = { version = "0.4.8", features = ["serde"] }
log = "0.4.27"
